# arangodb-types

arangodb-models/: Cargo.toml
arangodb-models/src/data/: attributes_field.rs  attributes_struct.rs  options.rs
arangodb-models/src/utils/: nodes.rs
arangodb-tests/: Cargo.toml
arangodb-types/: Cargo.toml
arangodb-types/src/traits/: collection.rs  document.rs
arangodb-types/src/types/: database_information.rs
arangodb-types/src/types/dates/: date.rs  datetime.rs  daytime.rs  expiration.rs
