[package]
name = "arangodb-tests"
version = "0.2.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.70"
arcstr = { version = "1.1.5", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.68"
lazy_static = "1.4.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dependencies.arangodb-types]
path = "../arangodb-types"
features = ["test", "db_mutex"]