[package]
name = "arangodb-types"
version = "0.2.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2021"

[features]
test = []
db_mutex = ["log", "rand", "tokio"]

[dependencies]
anyhow = "1.0.70"
arangors = { version = "0.5.3", features = ["arango3_7", "rocksdb", "reqwest_async_rustls"] }
arcstr = { version = "1.1.5", features = ["serde", "substr-usize-indices"] }
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
log = { version = "0.4.17", optional = true }
nanoid = "0.4.0"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.159"
serde_json = "1.0.95"
urlencoding = "2.1.2"
tokio = { version = "1.27.0", features = ["sync", "time"], optional = true }

[dependencies.arangodb-models]
path = "../arangodb-models"